@@ -1113,7 +1113,7 @@ ConsoleReaderThread(LPVOID arg)
 {
     ConsoleInfo *infoPtr = (ConsoleInfo *)arg;
     HANDLE *handle = infoPtr->handle;
-    DWORD count, waitResult;
+    DWORD waitResult;
     HANDLE wEvents[2];
 
     /* The first event takes precedence. */
@@ -1135,8 +1135,6 @@ ConsoleReaderThread(LPVOID arg)
 
 	    break;
 	}
-
-	count = 0;
 
 	/* 
 	 * Look for data on the console, but first ignore any events
